# bt_spp_acceptor

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ESP32_i2c_LSM9DS1.cpp  ESP32_i2c_LSM9DS1.h  LSM9DS1_Types.h  MadgwickAHRS.cpp  MadgwickAHRS.h  Motion_control.cpp  Motion_control.h  bl_comm.cpp  bl_comm.h  ble_gatt_comm.cpp  ble_gatt_comm.h  main.c  main.cpp  motor.cpp  motor.h
